--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1157,3 +1157,17 @@ isbn = {978-3-319-54710-7},
 journal = {Applied and Numerical Harmonic Analysis},
 doi = {10.1007/978-3-319-54711-4_10}
 }
+
+@article{framesintro,
+url = {http://dx.doi.org/10.1561/2000000006},
+year = {2008},
+volume = {2},
+journal = {Foundations and Trends® in Signal Processing},
+title = {An Introduction to Frames},
+doi = {10.1561/2000000006},
+issn = {1932-8346},
+number = {1},
+pages = {1-94},
+author = {Jelena Kovačević and Amina Chebira},
+url = {infoscience.epfl.ch/record/133268/files/08_KovacevicC_F%26T.pdf}
+}
